--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,2 +1,132 @@
 ---
-# defaults file for ansible-cassandra
+# Installation
+apache_mirror: 'https://www-us.apache/org/dist'
+cassandra_version: 3.11.3
+cassandra_download_url: '{{ apache_mirror }}/cassandra/{{ cassandra_version }}/apache-cassandra-{{ cassandra_version }}-bin.tar.gz'
+cassandra_install_dir: '/opt/cassandra'
+cassandra_user: 'cassandra'
+cassandra_group: '{{ cassandra_user }}'
+cassandra_conf_dir: '/etc/cassandra'
+cassandra_data_dir: '/var/lib/cassandra'
+cassandra_log_dir: '/var/log/cassandra'
+cassandra_pid_dir: '/var/run/cassandra'
+
+# Configuration
+cassandra_cluster_name: 'Test Cluster'
+cassandra_num_tokens: 256
+cassandra_hinted_handoff_enabled: true
+cassandra_max_hint_window_in_ms: 10800000
+cassandra_hinted_handoff_throttle_in_kb: 1024
+cassandra_max_hints_delivery_threads: 2
+cassandra_hints_directory: '{{ cassandra_data_dir }}/hints'
+cassandra_hints_flush_period_in_ms: 10000
+cassandra_max_hints_file_size_in_mb: 128
+cassandra_batchlog_replay_throttle_in_kb: 1024
+cassandra_authenticator: 'AllowAllAuthenticator'
+cassandra_authorizer: 'AllowAllAuthorizer'
+cassandra_role_manager: 'CassandraRoleManager'
+cassandra_roles_validity_in_ms: 2000
+cassandra_roles_update_interval_in_ms: 2000
+cassandra_permissions_validity_in_ms: 2000
+cassandra_permissions_update_interval_in_ms: 2000
+cassandra_credentials_validity_in_ms: 2000
+cassandra_credentials_update_interval_in_ms: 2000
+cassandra_partitioner: 'org.apache.cassandra.dht.Murmur3Partitioner'
+cassandra_data_file_directories: '{{ cassandra_data_dir }}/data'
+cassandra_commitlog_directory: '{{ cassandra_data_dir }}/commitlog'
+cassandra_cdc_enabled: false
+cassandra_cdc_raw_directory: '{{ cassandra_data_dir }}/cdc_raw'
+cassandra_disk_failure_policy: 'stop'
+cassandra_commit_failure_policy: 'stop'
+cassandra_prepared_statements_cache_size_mb: false
+cassandra_key_cache_size_in_mb: false
+cassandra_key_cache_save_period: 14400
+cassandra_key_cache_keys_to_save: 100
+cassandra_row_cache_class_name: 'org.apache.cassandra.cache.OHCProvider'
+cassandra_row_cache_size_in_mb: 0
+cassandra_row_cache_save_period: 0
+cassandra_row_cache_keys_to_save: 100
+cassandra_counter_cache_size_in_mb: false
+cassandra_counter_cache_save_period: 7200
+cassandra_counter_cache_keys_to_save: 100
+cassandra_saved_caches_directory: '{{ cassandra_data_dir }}/saved_caches'
+cassandra_commitlog_sync: 'periodic'
+cassandra_commitlog_sync_batch_window_in_ms: 2
+cassandra_commitlog_sync_period_in_ms: 10000
+cassandra_commitlog_segment_size_in_mb: 32
+cassandra_seed_provider_seeds: 
+  - '127.0.0.1'
+cassandra_concurrent_reads: 32
+cassandra_concurrent_writes: 32
+cassandra_concurrent_counter_writes: 32
+cassandra_concurrent_materialized_view_writes: 32
+cassandra_file_cache_size_in_mb: 512
+cassandra_buffer_pool_use_heap_if_exhausted: true
+cassandra_disk_optimization_strategy: 'ssd'
+cassandra_memtable_heap_space_in_mb: 2048
+cassandra_memtable_offheap_space_in_mb: 2048
+cassandra_memtable_cleanup_threshold: 0.11
+cassandra_memtable_allocation_type: 'heap_buffers'
+cassandra_commitlog_total_space_in_mb: 8192
+cassandra_memtable_flush_writers: 2
+cassandra_cdc_total_space_in_mb: 4096
+cassandra_cdc_free_space_check_interval_ms: 250
+cassandra_index_summary_capacity_in_mb: false
+cassandra_index_summary_resize_interval_in_minutes: 60
+cassandra_trickle_fsync: false
+cassandra_trickle_fsync_interval_in_kb: 10240
+cassandra_storage_port: 7000
+cassandra_ssl_storage_port: 7001
+cassandra_listen_address: 'localhost'
+cassandra_listen_interface_prefer_ipv6: false
+cassandra_broadcast_address: false
+cassandra_listen_on_broadcast_address: false
+cassandra_start_native_transport: true
+cassandra_native_transport_port: 9042
+cassandra_native_transport_port_ssl: 9142
+cassandra_native_transport_max_threads: 128
+cassandra_native_transport_max_frame_size_in_mb: 256
+cassandra_native_transport_max_concurrent_connections: '-1'
+cassandra_native_transport_max_concurrent_connections_per_ip: '-1'
+cassandra_rpc_address: 'localhost'
+cassandra_rpc_interface_prefer_ipv6: false
+cassandra_rpc_keepalive: true
+cassandra_incremental_backups: false
+cassandra_snapshot_before_compaction: false
+cassandra_auto_snapshot: true
+cassandra_column_index_size_in_kb: 64
+cassandra_column_index_cache_size_in_kb: 2
+cassandra_concurrent_compactors: 1
+cassandra_compaction_throughput_mb_per_sec: 16
+cassandra_sstable_preemptive_open_interval_in_mb: 50
+cassandra_read_request_timeout_in_ms: 5000
+cassandra_range_request_timeout_in_ms: 10000
+cassandra_write_request_timeout_in_ms: 2000
+cassandra_counter_write_request_timeout_in_ms: 5000
+cassandra_cas_contention_timeout_in_ms: 1000
+cassandra_truncate_request_timeout_in_ms: 60000
+cassandra_request_timeout_in_ms: 10000
+cassandra_slow_query_log_timeout_in_ms: 500
+cassandra_cross_node_timeout: false
+cassandra_endpoint_snitch: 'SimpleSnitch'
+cassandra_dynamic_snitch_update_interval_in_ms: 100
+cassandra_dynamic_snitch_reset_interval_in_ms: 600000
+cassandra_dynamic_snitch_badness_threshold: 0.1
+cassandra_internode_compression: 'dc'
+cassandra_inter_dc_tcp_nodelay: false
+cassandra_tracetype_query_ttl: 86400
+cassandra_tracetype_repair_ttl: 604800
+cassandra_enable_user_defined_functions: false
+cassandra_enable_scripted_user_defined_functions: false
+cassandra_enable_materialized_views: true
+cassandra_windows_timer_interval: 1
+cassandra_tombstone_warn_threshold: 1000
+cassandra_tombstone_failure_threshold: 100000
+cassandra_batch_size_warn_threshold_in_kb: 5
+cassandra_batch_size_fail_threshold_in_kb: 50
+cassandra_unlogged_batch_across_partitions_warn_threshold: 10
+cassandra_compaction_large_partition_warning_threshold_mb: 100
+cassandra_gc_log_threshold_in_ms: 200
+cassandra_gc_warn_threshold_in_ms: 1000
+cassandra_max_value_size_in_mb: 256
+cassandra_back_pressure_enabled: false
