--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -1,2 +1,6 @@
 ---
-# handlers file for ansible-cassandra
+- name: restart cassandra
+  service:
+    name: '{{ cassandra_daemon }}'
+    enabled: true
+    state: restarted
